LIST OF CHANGES FOR NPG-QC PACKAGE

 - genotype check: speed up pipeline job submission for deeply plexed lanes
   by moving calls that involde access to reference repository out of the
   can_run method

release 62.8
 - tag_sniff modified clip and revcomp options to handle split tags
 - Sort results for merged genotypes as well - to avoid out of order failure.
 - specify an appropriate "accept" header when sending manual qc
   outcomes to LIMs (header was not set resulting in 406 responce
   code)

release 62.7
 - current staging directories do not have autoqc results in
   bustard_path; stop looking there
 - ClearPress Perl library is pinned to v. 473.0.5
 - upstream_tags autoqc check: stop falling back on files in IRODs

release 62.6
 - make building the iRODS handle of npg_qc::autoqc::checks::genotype
   lazy to avoid calling baton until required at runtime
 - translation from a database composition representation to the
     npg_tracking::glossary::composition type object
 - db query for compisition-based tables should include a condition
     on tag_index if only lanes or plexes are being retrieved
 - Fix in npg_qc::utils::bam_genotype for rare out of order mpileup failures 
 - Travis CI build: when building dependencies, us the same
   branch as the one the pull request is made to.
 - back to testing with mysql 5.7.13 in travis
 - drop node 0.12 from node travis matrix
 - add perl 5.22-shrplib to travis matrix
 - to reduce uncertainty in ranking close results, increase precision
   used for ranking contamination results
 - call_gtck_composite_rpt.pl - supply rpt list to genotype check
 - Code and tests changes to reduce number of warnings under Perl 5.22.2
 - sequence mismatch - do not return PDL special values, treat NaN as
   a bad value and return undefined instead

release 62.5
 - a very concise replacement for NPG_QC pages
 - no templates rna_seqc results - we should not try rendering

release 62.4