@@ -1,31 +1,29 @@
 use strict;
 use warnings;
 use Cwd;
-use File::Temp qw/ tempdir /;
-use Test::More tests => 50;
+use Test::More tests => 48;
 use Test::Exception;
 
-my $repos = cwd . '/t/data/autoqc';
-my $snv_repository = cwd . '/t/data/autoqc/population_snv';
-my $snv_repository_with_vcf = cwd . '/t/data/autoqc/population_snv_with_vcf';
+my $repos                   = 't/data/autoqc';
+my $snv_repository          = 't/data';
+my $snv_repository_with_vcf = 't/data/autoqc/population_snv_with_vcf';
 
 $ENV{NPG_WEBSERVICE_CACHE_DIR} = q[t/data/autoqc];
 
 use_ok ('npg_qc::autoqc::checks::verify_bam_id');
 
-my $dir = tempdir(CLEANUP => 1);
 {
   my @checks = ();
   push @checks, npg_qc::autoqc::checks::verify_bam_id->new( 
-      id_run => 13940, 
-      position => 8, 
-      qc_in => 't/data/autoqc/', 
-      repository => $repos,
+      id_run         => 13940, 
+      position       => 8, 
+      qc_in          => 't/data/autoqc/', 
+      repository     => $repos,
       snv_repository => $snv_repository_with_vcf );
   push @checks, npg_qc::autoqc::checks::verify_bam_id->new( 
-      rpt_list => '13940:8', 
-      qc_in => 't/data/autoqc/', 
-      repository => $repos,
+      rpt_list       => '13940:8', 
+      qc_in          => 't/data/autoqc/', 
+      repository     => $repos,
       snv_repository => $snv_repository_with_vcf );
   
   foreach my $r (@checks) {
@@ -44,15 +42,15 @@ my $dir = tempdir(CLEANUP => 1);
 {
   my @checks = ();
   push @checks, npg_qc::autoqc::checks::verify_bam_id->new( 
-      id_run => 13886, 
-      position => 8, 
-      qc_in    => 't/data/autoqc/', 
-      repository => $repos,
+      id_run         => 13886, 
+      position       => 8, 
+      qc_in          => 't/data/autoqc/', 
+      repository     => $repos,
       snv_repository => $snv_repository_with_vcf);
   push @checks, npg_qc::autoqc::checks::verify_bam_id->new( 
-      rpt_list => '13886:8', 
-      qc_in => 't/data/autoqc/', 
-      repository => $repos,
+      rpt_list       => '13886:8', 
+      qc_in          => 't/data/autoqc/', 
+      repository     => $repos,
       snv_repository => $snv_repository_with_vcf);
 
   foreach my $r (@checks) {
@@ -62,21 +60,23 @@ my $dir = tempdir(CLEANUP => 1);
     ok($r->alignments_in_bam, 'Alignments in bam true');
     is($r->lims->reference_genome, 'Homo_sapiens (1000Genomes_hs37d5)', 'reference genome');    
     ok((not $r->can_run), 'Cannot run at lane level for multi plex in pool') or diag $r->result->comments;
-    my $snv_path = join '/', cwd, 't/data/autoqc/population_snv_with_vcf/Homo_sapiens/default/Standard/1000Genomes_hs37d5';
+    my $snv_path = join '/', cwd,
+      't/data/autoqc/population_snv_with_vcf/Homo_sapiens/default/Standard/1000Genomes_hs37d5';
     is($r->snv_path, $snv_path, 'snv path is set');
   }
 }
 
 {
-  my $r = npg_qc::autoqc::checks::verify_bam_id->new( 
-      id_run => 2549, 
-      position => 4, 
-      file_type => 'bam', 
-      path => 't/data/autoqc/', 
-      bam_file => 'alignment.bam',
-      repository => $repos,
-      snv_repository => $snv_repository,
-  ); 
+  my $h = {
+      id_run         => 2549, 
+      position       => 4, 
+      qc_in          => 't/data/autoqc/', 
+      bam_file       => 'alignment.bam',
+      repository     => $repos,
+      snv_repository => $snv_repository
+  };
+
+  my $r = npg_qc::autoqc::checks::verify_bam_id->new($h);
   lives_ok { $r->result; } 'No error creating result object';
   ok( defined $r->ref_repository(), 'A default reference repository is set' );
   is($r->lims->library_type, undef, 'Library type returned OK');
@@ -84,56 +84,30 @@ my $dir = tempdir(CLEANUP => 1);
   is($r->lims->reference_genome, undef, 'No reference genome');    
   is($r->can_run, 0, 'Not done if library_type is undef');
   is($r->snv_path, undef, 'snv path is not set');
-}
 
-{
-  my $r = npg_qc::autoqc::checks::verify_bam_id->new( 
-      id_run => 2549, 
-      position => 1, 
-      file_type => 'bam', 
-      path => 't/data/autoqc/', 
-      bam_file => 'alignment.bam',
-      repository => $repos,
-      snv_repository => $snv_repository,
-  ); 
-  lives_ok { $r->result; } 'No error creating result object';
+  $h->{'position'}       = 1;
+  $h->{'snv_repository'} = $snv_repository_with_vcf;
+
+  $r = npg_qc::autoqc::checks::verify_bam_id->new($h);
   ok( defined $r->ref_repository(), 'A default reference repository is set' );
   is($r->lims->library_type, 'Standard', 'Standard library type returned OK');
   is($r->alignments_in_bam, 1, 'Alignments in bam');
-  is($r->snv_path, undef, 'snv path is not set');
-  is($r->can_run, 0, 'Not done if library_type is Standard and bam file is aligned BUT there is no VCF file');
-}
+  is($r->lims->reference_genome, 'Anopheles_gambiae (PEST)', 'reference');
+  is($r->can_run, 0, 'Not done - reference is not human');
 
-{
-  my $r = npg_qc::autoqc::checks::verify_bam_id->new( 
-      id_run => 2549, 
-      position => 1, 
-      file_type => 'bam', 
-      path => 't/data/autoqc/', 
-      bam_file => 'alignment.bam',
-      repository => $repos,
-      snv_repository => $snv_repository_with_vcf,
-  ); 
-  is($r->lims->reference_genome, 'Anopheles_gambiae (PEST)' , 'Has a reference genome');    
-  my $snv_path = join '/', cwd, 't/data/autoqc/population_snv_with_vcf/Anopheles_gambiae/default/Standard/PEST';
+  my $snv_path = join '/', cwd,
+    't/data/autoqc/population_snv_with_vcf/Anopheles_gambiae/default/Standard/PEST';
   is($r->snv_path, $snv_path, 'snv path is set correctly');
-  is($r->can_run, 1, 'Done if library_type is Standard and bam file is aligned and there is a VCF file');
-}
 
-{
-  my $r = npg_qc::autoqc::checks::verify_bam_id->new( 
-      id_run => 2549, 
-      position => 2, 
-      file_type => 'bam', 
-      path => 't/data/autoqc/', 
-      bam_file => 'alignment.bam',
-      repository => $repos,
-      snv_repository => $snv_repository_with_vcf,
-  ); 
-  is($r->lims->reference_genome, 'Anopheles_gambiae (PEST)' , 'Has a reference genome');    
-  my $snv_path = join '/', cwd, 't/data/autoqc/population_snv_with_vcf/Anopheles_gambiae/default/Standard/PEST';
-  is($r->snv_path, $snv_path, 'snv path is set correctly');
-  is($r->can_run, 0, 'Not done if library_type is cRNA and bam file is aligned and there is a VCF file');
+  $h->{'position'}       = 8;
+  $h->{'snv_repository'} = $snv_repository;
+  $r = npg_qc::autoqc::checks::verify_bam_id->new($h);
+  is($r->lims->library_type, 'High complexity',
+    '"High complexity" library type returned OK');
+  is($r->lims->reference_genome, 'Homo_sapiens (SOME_OR_OTHER)', 'reference');
+  is($r->can_run, 1, 'Can run - reference is human');
+  throws_ok { $r->execute() } qr/Can't find snv file/,
+    'run-time error if no snv file found';
 }
 
 1;
