@@ -4,6 +4,11 @@ LIST OF CHANGES FOR NPG-QC PACKAGE
    by moving calls that involde access to reference repository out of the
    can_run method
 
+ - genotype and verify_bam_id checks:
+     speed up pipeline job submission for deeply plexed lanes by
+     moving calls that involde access to reference repository out of the
+     can_run method
+
 release 62.8
  - tag_sniff modified clip and revcomp options to handle split tags
  - Sort results for merged genotypes as well - to avoid out of order failure.
